# square_planner

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.local.yml  docker-compose.yml
.github/workflows/: deploy.yml  test_ssh  test_ssh.yml
back/: .example.env  Dockerfile  Makefile  go.mod  main.py  pyproject.toml  requirements.txt
back/cmd/: main.go
back/internal/: routes.go
back/internal/auth/: routes.go
back/internal/auth/api/v1/: handlers.go
back/internal/kpi/: routes.go
back/migrations/: env.py
back/migrations/versions/: 50b0def08514_initial.py  548b9a9da65c_migration.py  add137317fc6_initial_migration.py
back/pkg/router/: router.go
back/sqrt_back_project/migrations/: env.py
back/sqrt_back_project/migrations/versions/: 77197e1af234_start.py
back/sqrt_back_project/src/: .env  main.py
back/sqrt_back_project/src/configs/: db.py  settings.py
back/src/: __main__.py  main.py
back/src/api/act/: models.py
back/src/api/aim/: models.py
back/src/api/auth/: dependencies.py  exceptions.py  handlers.py  jwt.py  jwt_token.py  manager.py  models.py  password.py  repository.py  router.py  schemas.py  services.py
back/src/api/kpi/: models.py  router.py
back/src/api/subscription/: constants.py  models.py
back/src/api/task/: models.py
back/src/api/tasks/: router.py
back/src/configs/: db.py  settings.py
back/src/models/: TaskModel.py  UserModel.py
back/src/repository/: UserRepository.py
back/src/utils/: sql_utils.py
front/: README.md  nuxt.config.ts  package-lock.json  package.json  vite.config.js  vue.config.js
front/assets/global/: _vars.scss
front/assets/styles/: main.scss
front/components/menu/: Header.vue
front/layouts/: default.vue
front/pages/: aims.vue  calendar.vue  index.vue  square.vue  tasks.vue
front/plugins/: global-scss.js
front/src/: App.vue
front/src/assets/: base.css  main.css
front/src/components/Head/: MenuComp.vue
front/src/configs/: apisender.js  axios.js
front/src/router/: index.js
front/src/views/: AboutView.vue  BoardView.vue  MainView.vue  RoleView.vue  WeekView.vue
front/store/: auth.ts
nginx/: nginx.conf
