[tool.poetry]
name = "sqrt-back-project"
version = "0.1.0"
description = ""
authors = ["DonnyHipp <toloknov.igor123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
