[tool.poetry]
name = "pdca"
version = "0.1.0"
description = ""
authors = ["DonnyHipp <toloknov.igor123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
pydantic = {extras = ["email"], version = "^2.7.3"}
asyncpg = "^0.29.0"
ruff = "^0.2.2"
alembic = "^1.13.1"
greenlet = "^3.0.3"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
passlib = "^1.7.4"
setuptools = "^69.1.1"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
pytest = "^8.0.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 8
